# simple-chat

./: .gitignore
mobile/: .prettierrc  README.md  app.json  package.json  pnpm-lock.yaml
mobile/app/: _layout.tsx  create-room.tsx  index.tsx
mobile/app/rooms/: [id].tsx
mobile/components/: ImageMessage.tsx  ImagePicker.tsx  MessageBubble.tsx  MessageGroup.tsx  MessageInput.tsx  MessageReactions.tsx  QuickSearch.tsx  ReactionButton.tsx  ReplyPreview.tsx  RoomInfo.tsx  SwipeToReply.tsx  SystemMessage.tsx  TypingIndicator.tsx  UsernameSetup.tsx
mobile/components/common/: ActionButton.tsx  ConnectionStatus.tsx  EmptyState.tsx  LoadingState.tsx  SearchInput.tsx  StatusIndicator.tsx  ThemeToggle.tsx  index.ts
mobile/components/home/: ConnectionError.tsx  HomeEmptyState.tsx  HomeHeader.tsx  RoomCard.tsx  RoomList.tsx  SearchResults.tsx  SearchSection.tsx  index.ts
mobile/components/layout/: ScreenLayout.tsx
mobile/components/ui/: Badge.tsx  Card.tsx  button.tsx  icon.tsx  input.tsx  text.tsx
mobile/hooks/: useHomeScreen.ts  useStarredMessages.ts
mobile/lib/: socket.tsx
mobile/lib/socket/: SocketProvider.tsx  index.ts  types.ts  useRoom.ts  useRoomState.ts  useSocketActions.ts  useSocketConnection.ts  useSocketEvents.ts  useTypingState.ts
mobile/types/: socketio.ts
server/: Cargo.toml  build.rs
server/src/: main.rs  socket.rs  state.rs
server/src/models/: event.rs  mod.rs  room.rs
server/src/socket/: message_management.rs  mod.rs  room_events.rs  room_list.rs  send_event.rs  starred_messages.rs  typing.rs  user_management.rs
(+38 files in other folders)
