[package]
name = "server"
version = "2.0.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros", "ws"] }
chrono = { version = "0.4.42", features = ["serde"] }
color-eyre = "0.6.4"
dashmap = "6.1.0"
dotenvy = "0.15.7"
http = "1.3.1"
http-serde-ext = "1.0.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full", "tokio", "log"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "json",
    "env-filter",
    "local-time",
    "serde",
    "serde_json",
    "time",
] }
ts-rs = { version = "11.0.1", features = ["chrono-impl", "bson-uuid-impl", "uuid-impl"] }
visible = "0.0.1"
socketioxide = { version = "0.17.2", features = ["state", "tracing"] }
uuid = { version = "1.18.1", features = ["v4"] }
